[gd_scene load_steps=9 format=2]

[ext_resource path="res://grafika/worldElements/fontain.png" type="Texture" id=1]
[ext_resource path="res://skrypty/Fontain.gd" type="Script" id=2]
[ext_resource path="res://grafika/animation/chestAnimationWhite.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 40, 50.5 )

[sub_resource type="Animation" id=48]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=53]
resource_name = "empty"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=49]
resource_name = "full"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=54]
resource_name = "idle"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Fontain" type="Sprite"]
self_modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( -117, 872 )
texture = ExtResource( 1 )
hframes = 6
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, 13.5 )
shape = SubResource( 52 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "full"
anims/RESET = SubResource( 48 )
anims/empty = SubResource( 53 )
anims/full = SubResource( 49 )

[node name="ItemTableAnimation" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0, 0.976471, 1, 1 )
position = Vector2( 0, -30 )
z_index = 1
texture = ExtResource( 3 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="ItemTableAnimation"]
anims/idle = SubResource( 54 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
